--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+
+    <header>
+        <div id="logo">
+            <img src="./img/img/logo.svg" alt="Logo">
+        </div>
+    </header>
+
 </body>
 
 </html>
