[FEAT]: add document title with author and date info

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
         </div>
     </header>
 
+    <main>
+        <div>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+
+            <div class="article-info">
+                <div class="writed-by">Scritto da <span class="writer">The Booleaner</span></div>
+                <div class="data">il 10/10/2020</div>
+            </div>
+        </div>
+    </main>
+
 </body>
 
 </html>
