[FEAT]: add photo section with images and caption

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </header>
 
     <main>
+
         <div>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
 
@@ -25,6 +26,21 @@
                 <div class="data">il 10/10/2020</div>
             </div>
         </div>
+
+        <section class="photo-section">
+
+            <div>
+                <img class="article-img" src="./img/img/tim-1.jpg" alt="">
+                <img class="article-img" src="./img/img/tim-2.jpg" alt="">
+            </div>
+
+            <div class="caption">
+                <p>1st photo: John S. and James L. Kight Foundation, by Scott Henrichsen</p>
+                <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+            </div>
+
+        </section>
+
     </main>
 
 </body>
