[FEAT]: add article main text

--- a/index.html
+++ b/index.html
@@ -41,6 +41,42 @@
 
         </section>
 
+        <section class="article-body">
+
+            <p class="main-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quis, nostrum esse magni similique
+                ut sit eaque officia maxime nisi cupiditate sapiente minima tenetur accusamus odit pariatur quasi enim
+                in eveniet ad neque distinctio fugiat. Cum vitae cumque ducimus ex? Labore modi, tempora placeat cumque
+                suscipit aspernatur maiores, voluptates magnam qui officia iste! Eligendi quisquam omnis quas incidunt
+                quae consequatur neque provident ea ad eum veniam vitae deserunt officia, mollitia, assumenda cumque
+                ipsam minus, sint voluptas dolorem ut quibusdam. Sunt iure quae est placeat at earum, recusandae libero
+                nemo id aspernatur praesentium quo ducimus sit aut et nulla molestias facilis eum, non dolorem possimus
+                ea consectetur accusamus similique. <span class="highlighted-text">Facilis consequatur dignissimos
+                    tenetur
+                    consectetur repellat
+                    blanditiis recusandae a praesentium natus enim velit minus aut, voluptate</span> quo minima ea rem,
+                doloribus
+                quis sequi explicabo voluptatum rerum, sed nesciunt molestiae? Doloribus ad libero eveniet quo
+                blanditiis. Minima earum consectetur iste enim illo doloremque incidunt magnam harum itaque, corporis,
+                natus nihil aut! Blanditiis minima qui sint esse nam deserunt unde, eius praesentium, temporibus dicta
+                eaque!
+            </p>
+
+            <ul class="main-list">
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sit voluptatum cupiditate perferendis
+                    consequatur laborum hic officiis nemo deleniti a? Molestias eos aliquam quibusdam cumque sed quod
+                    alias aliquid voluptatem.</li>
+
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sit voluptatum cupiditate perferendis
+                    consequatur laborum hic officiis nemo deleniti a? Molestias eos aliquam quibusdam cumque sed quod
+                    alias aliquid voluptatem.</li>
+
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sit voluptatum cupiditate perferendis
+                    consequatur laborum hic officiis nemo deleniti a? Molestias eos aliquam quibusdam cumque sed quod
+                    alias aliquid voluptatem.</li>
+            </ul>
+        </section>
+
     </main>
 
 </body>
