[FEAT]: add table

--- a/index.html
+++ b/index.html
@@ -75,6 +75,79 @@
                     consequatur laborum hic officiis nemo deleniti a? Molestias eos aliquam quibusdam cumque sed quod
                     alias aliquid voluptatem.</li>
             </ul>
+
+            <table>
+
+                <thead>
+
+                    <tr>
+                        <th class="col-25">
+                            Lorem, ipsum dolor
+                        </th>
+
+                        <th class="col-25">
+                            Lorem, ipsum dolor
+                        </th>
+
+                        <th class="col-50">
+                            Lorem, ipsum dolor
+                        </th>
+                    </tr>
+
+                </thead>
+
+                <tbody>
+
+                    <tr class="blue-raw">
+                        <td>
+                            Lorem, ipsum dolor.
+                        </td>
+
+                        <td>
+                            Lorem, ipsum dolor.
+                        </td>
+                        <td>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima dolorem, magnam reiciendis
+                            commodi laborum, laboriosam temporibus consequatur quae perspiciatis harum ut architecto.
+                            Autem cum natus ratione earum recusandae soluta voluptates fugit molestiae veniam itaque
+                            placeat sapiente vel, quas doloremque eveniet?
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Lorem, ipsum dolor.
+                        </td>
+
+                        <td>
+                            Lorem, ipsum dolor.
+                        </td>
+                        <td>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima dolorem, magnam reiciendis
+                            commodi laborum, laboriosam temporibus consequatur quae perspiciatis harum ut architecto.
+                            Autem cum natus ratione earum recusandae soluta voluptates fugit molestiae veniam itaque
+                            placeat sapiente vel, quas doloremque eveniet?
+                        </td>
+                    </tr>
+
+                    <tr class="blue-raw">
+                        <td>
+                            Lorem, ipsum dolor.
+                        </td>
+
+                        <td>
+                            Lorem, ipsum dolor.
+                        </td>
+                        <td>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima dolorem, magnam reiciendis
+                            commodi laborum, laboriosam temporibus consequatur quae perspiciatis harum ut architecto.
+                            Autem cum natus ratione earum recusandae soluta voluptates fugit molestiae veniam itaque
+                            placeat sapiente vel, quas doloremque eveniet?
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
         </section>
 
     </main>
