[FEAT]: add more article text

--- a/index.html
+++ b/index.html
@@ -148,6 +148,17 @@
 
                 </tbody>
             </table>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia illo delectus nulla eum. Sapiente,
+                corporis non! Totam ducimus laborum sequi iusto veniam quidem facere nemo doloribus ad, dignissimos non
+                in, atque maiores velit eos aliquam quae quisquam! Voluptate dolorem hic possimus nemo id obcaecati
+                praesentium delectus ratione blanditiis! Obcaecati recusandae molestias soluta! Nostrum dolor eveniet
+                iure accusantium rem! <span class="highlighted-text">Tenetur ullam mollitia et consectetur ea molestiae
+                    optio iure minus?</span> Numquam aut
+                rerum quae dolorum fugit, impedit vel animi cum quam nesciunt sint sequi iusto ex et debitis sunt
+                repellendus natus inventore quisquam corporis consequatur non illum! Id, expedita! Deserunt, aut quod.
+            </p>
         </section>
 
     </main>
