[FEAT]: add footer suggestion

--- a/index.html
+++ b/index.html
@@ -161,6 +161,20 @@
             </p>
         </section>
 
+        <footer>
+
+            <h3>Potrebbero interessarti</h3>
+
+            <div class="article-suggest-1">
+                <div class="suggest-title">Lorem, ipsum dolor</div>
+            </div>
+
+            <div class="article-suggest-2">
+                <div class="suggest-title">Lorem, ipsum dolor</div>
+            </div>
+
+        </footer>
+
     </main>
 
 </body>
